--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The WeatherMate App</title>
+    <title>The WeatherX App</title>
     <link rel="manifest" href="manifest.json" />
 
     <meta
@@ -31,32 +31,32 @@
     />
     <link rel="icon" type="image/x-icon" href="utils/favicon.ico" />
 
-    <meta property="og:title" content="The WeatherMate App" />
+    <meta property="og:title" content="The WeatherX App" />
     <meta
       property="og:description"
       content="Get up-to-date weather information and forecasts for any location with the WeatherMate App."
     />
     <meta
       property="og:image"
-      content="https://hoangsonww.github.io/WeatherMate-App/utils/image.png"
+      content="https://ij26.github.io/weatherx.github.io//utils/image.png"
     />
     <meta
       property="og:url"
-      content="https://hoangsonww.github.io/WeatherMate-App/"
+      content="https://hoangsonww.github.io/WeatherX-App/"
     />
-    <meta property="og:site_name" content="WeatherMate App" />
+    <meta property="og:site_name" content="WeatherX App" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="en_US" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="The WeatherMate App" />
+    <meta name="twitter:title" content="The WeatherX App" />
     <meta
       name="twitter:description"
       content="Stay updated with the latest weather forecasts with WeatherMate. Real-time updates, forecasts, and air quality info for your location."
     />
     <meta
       name="twitter:image"
-      content="https://hoangsonww.github.io/WeatherMate-App/utils/image.png"
+      content="https://ij26.github.io/weatherx.github.io//utils/image.png"
     />
     <meta name="twitter:site" content="@hoangsonww" />
     <meta name="twitter:creator" content="@hoangsonww" />
