--- a/404.html
+++ b/404.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>404 Not Found - The WeatherMate App</title>
+    <title>404 Not Found - The WeatherX App</title>
     <link rel="stylesheet" href="https://hoangsonww.github.io/WeatherMate-App/src/css/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="icon" type="image/x-icon" href="https://hoangsonww.github.io/WeatherMate-App/utils/favicon.ico">
     <link rel="manifest" href="https://hoangsonww.github.io/WeatherMate-App/manifest.json">
     <style>
         body {
-            background-image: url("https://hoangsonww.github.io/WeatherMate-App/utils/clouds.jpg");
+            background-image: url("https://ij26.github.io/weatherx.github.io//utils/clouds.jpg");
             font-family: "Poppins", sans-serif;
             display: flex;
             flex-direction: column;
@@ -67,12 +67,12 @@
 
 <body>
     <header style="text-align: center">
-        <img src="https://hoangsonww.github.io/WeatherMate-App/utils/logo.png" id="img" onclick="window.location.href='index.html'" title="Click to go back to the home page" style="cursor: pointer"/>
+        <img src="https://ij26.github.io/weatherx.github.io//utils/logo.png" id="img" onclick="window.location.href='index.html'" title="Click to go back to the home page" style="cursor: pointer"/>
         <h1 id="my-heading">The WeatherMate App</h1>
         <div class="error-container">
             <h1>404</h1>
             <p>Oops! The page you're looking for can't be found.</p>
-            <a href="https://hoangsonww.github.io/WeatherMate-App/" class="back-link">Back to Home</a>
+            <a href="https://ij26.github.io/weatherx.github.io/" class="back-link">Back to Home</a>
         </div>
     </header>
 </body>
