--- a/src/html/about.html
+++ b/src/html/about.html
@@ -20,11 +20,11 @@
 
     <img src="../../utils/logo.png" id="img" onclick="window.location.href='../../index.html'" title="Click to go back to the home page" style="cursor: pointer"/>
 
-    <h1 style="text-align: center">About The WeatherMate App</h1>
+    <h1 style="text-align: center">About The WeatherX App</h1>
 
     <div class="content">
         <p>
-            Welcome to The WeatherMate App, your digital meteorologist! Its mission is to empower you with accurate, real-time weather updates whether you're at home or on the go. The WeatherMate App delivers a seamless experience, ensuring you're prepared for whatever the weather brings.
+            Welcome to The WeatherX App, your digital meteorologist! Its mission is to empower you with accurate, real-time weather updates whether you're at home or on the go. The WeatherMate App delivers a seamless experience, ensuring you're prepared for whatever the weather brings.
         </p>
 
         <h2>Core Features:</h2>
@@ -47,40 +47,6 @@
             <li>Dark mode feature to reduce eye strain and save device battery life.</li>
             <li>Customizable settings to personalize your weather data display.</li>
         </ul>
-
-        <div class="other-apps">
-            <h2>Explore More of My Projects:</h2>
-
-            <div class="app">
-                <p>Discover a world of movies and series with the <strong>MovieVerse Database</strong>. Your ultimate destination for movie buffs!</p>
-                <a href="https://hoangsonww.github.io/The-MovieVerse-Database/" class="btn">Visit The MovieVerse</a>
-            </div>
-
-            <div class="app">
-                <p>Organize your thoughts and tasks with the <strong>StickyNotes App</strong>. A simple and effective way to stay on track!</p>
-                <a href="https://hoangsonww.github.io/The-StickyNotes-App/" class="btn">Visit The StickyNotes</a>
-            </div>
-
-            <div class="app">
-                <p>Unleash your culinary creativity with the <strong>RecipeGenie App</strong>. Find and share recipes with ease!</p>
-                <a href="https://hoangsonww.github.io/RecipeGenie-App/" class="btn">Visit RecipeGenie</a>
-            </div>
-
-            <div class="app">
-                <p>Manage your daily tasks efficiently with the <strong>ToDo App</strong>. Your personal assistant for productivity!</p>
-                <a href="https://hoangsonww.github.io/The-ToDo-App/" class="btn">Visit The ToDo App</a>
-            </div>
-
-            <div class="app">
-                <p>Plan and track your events seamlessly with the <strong>EventHorizon App</strong>. Never miss an important date again!</p>
-                <a href="https://hoangsonww.github.io/The-Event-Horizon-App/" class="btn">Visit EventHorizon</a>
-            </div>
-
-            <div class="app">
-                <p>Take a look at my other projects on <strong>GitHub</strong>. A showcase of my coding journey!</p>
-                <a href="https://github.com/hoangsonww" class="btn">Visit My GitHub!</a>
-            </div>
-        </div>
 
         <p>
             The WeatherMate App is a labor of love, crafted with the intent to bring you the most up-to-date weather information in the most convenient way possible. Developed by Son Nguyen Hoang in 2023, our app is constantly evolving with new features to enhance your weather experience.
