--- a/src/html/about.html
+++ b/src/html/about.html
@@ -47,13 +47,15 @@
             <li>Dark mode feature to reduce eye strain and save device battery life.</li>
             <li>Customizable settings to personalize your weather data display.</li>
         </ul>
+        
 
+       
         <p>
-            The WeatherMate App is a labor of love, crafted with the intent to bring you the most up-to-date weather information in the most convenient way possible. Developed by Son Nguyen Hoang in 2023, our app is constantly evolving with new features to enhance your weather experience.
+            The WeatherX App is a labor of love, crafted with the intent to bring you the most up-to-date weather information in the most convenient way possible. Developed by Son Nguyen Hoang in 2023, our app is constantly evolving with new features to enhance your weather experience.
         </p>
 
         <p>
-            Thank you for choosing The WeatherMate App. We are committed to providing you with a reliable and enjoyable weather service.
+            Thank you for choosing The WeatherX App. We are committed to providing you with a reliable and enjoyable weather service.
         </p>
 
         <a href="../../index.html">← Back to Home</a>
