--- a/src/html/about.html
+++ b/src/html/about.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About The WeatherMate App</title>
+    <title>About The WeatherX App</title>
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="manifest" href="../../manifest.json" />
     <link rel="icon" type="image/x-icon" href="../../utils/favicon.ico" />
@@ -35,7 +35,7 @@
 
     <div class="content">
       <p>
-        Welcome to The WeatherMate App, your digital meteorologist! Its mission
+        Welcome to The WeatherX App, your digital meteorologist! Its mission
         is to empower you with accurate, real-time weather updates whether
         you're at home or on the go. The WeatherMate App delivers a seamless
         experience, ensuring you're prepared for whatever the weather brings.
