--- a/src/html/about.html
+++ b/src/html/about.html
@@ -31,7 +31,7 @@
       style="cursor: pointer"
     />
 
-    <h1 style="text-align: center">About The WeatherMate App</h1>
+    <h1 style="text-align: center">About The WeatherX App</h1>
 
     <div class="content">
       <p>
