--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 
     <meta
       name="description"
-      content="The WeatherMate App provides real-time weather updates, forecasts, and air quality information for any location."
+      content="The WeatherX App provides real-time weather updates, forecasts, and air quality information for any location."
     />
     <meta
       name="keywords"
-      content="weather, forecast, air quality, temperature, humidity, wind, WeatherMate"
+      content="weather, forecast, air quality, temperature, humidity, wind, WeatherX"
     />
     <meta name="author" content="Son Nguyen Hoang" />
     <meta http-equiv="content-language" content="en" />
@@ -21,7 +21,7 @@
 
     <link
       rel="canonical"
-      href="https://hoangsonww.github.io/WeatherMate-App/"
+      href="https://ij26.github.io/weatherx.github.io/"
     />
     <link rel="stylesheet" href="src/css/style.css" />
     <script src="src/js/script.js" defer></script>
@@ -42,7 +42,7 @@
     />
     <meta
       property="og:url"
-      content="https://hoangsonww.github.io/WeatherX-App/"
+      content="https://ij26.github.io/weatherx.github.io/"
     />
     <meta property="og:site_name" content="WeatherX App" />
     <meta property="og:type" content="website" />
@@ -89,7 +89,7 @@
       />
 
       <a href="index.html" style="text-decoration: none">
-        <h1 id="my-heading">The WeatherMate App</h1>
+        <h1 id="my-heading">The WeatherX App</h1>
       </a>
 
       <main id="main"></main>
@@ -258,7 +258,7 @@
         <div class="chat-messages"></div>
         <input
           type="text"
-          placeholder="Ask WeatherMate..."
+          placeholder="Ask WeatherX..."
           class="chat-input"
         />
       </div>
